dynamic graph size based on size of datatset to write in file

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -18,22 +18,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Save_Genreal_Report(corr_matrix, dup, head, tail, des, null, info, shape):\n",
-    "    #  report = input(\"Enter the file name to save the report (e.g., report.txt): \")\n",
+    "   \n",
     "     try:\n",
     "        folder_path = input(\"Enter the full path or name of the folder to save the report and heatmap: \").strip()\n",
     "        os.makedirs(folder_path, exist_ok=True)\n",
     "        report = os.path.join(folder_path, \"report.txt\")\n",
     "        heatmap_file = os.path.join(folder_path, \"correlation_heatmap.png\")\n",
-    "        plt.figure(figsize=(8, 6))\n",
+    "       \n",
+    "\n",
+    "        rows, cols = corr_matrix.shape\n",
+    "        max_label_length = max(len(label) for label in corr_matrix.columns)\n",
+    "\n",
+    "        fig_width = max(8, cols * 0.5, max_label_length * 0.5)\n",
+    "        fig_height = max(6, rows * 0.5)\n",
+    "\n",
+    "        plt.figure(figsize=(fig_width, fig_height))\n",
     "        plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
     "        plt.colorbar()\n",
-    "        plt.xticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
-    "        plt.yticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
+    "        plt.xticks(np.arange(cols), corr_matrix.columns, rotation=45, ha=\"right\", fontsize=12)\n",
+    "        plt.yticks(np.arange(rows), corr_matrix.columns, rotation=0, fontsize=12)\n",
     "        plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
     "        plt.tight_layout()\n",
     "        plt.savefig(heatmap_file)  \n",
@@ -83,109 +91,6 @@
     "     except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
     "\n",
-    "\n",
-    "\n",
-    "    # try:\n",
-    "    #         # Create the folder path\n",
-    "    #         folder_path = input(\"Enter the full path or name of the folder to save the report and heatmap: \").strip()\n",
-    "    #         os.makedirs(folder_path, exist_ok=True)\n",
-    "            \n",
-    "    #         # Report and heatmap file paths\n",
-    "    #         report = os.path.join(folder_path, \"report.txt\")\n",
-    "    #         heatmap_file = os.path.join(folder_path, \"correlation_heatmap.png\")\n",
-    "            \n",
-    "    #         # Create the heatmap\n",
-    "    #         plt.figure(figsize=(8, 6))\n",
-    "    #         plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
-    "    #         plt.colorbar()\n",
-    "    #         plt.xticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
-    "    #         plt.yticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=12)\n",
-    "    #         plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
-    "    #         plt.tight_layout()\n",
-    "    #         plt.savefig(heatmap_file)  \n",
-    "    #         plt.close()\n",
-    "            \n",
-    "    #         # Write the report in table format\n",
-    "    #         with open(report, 'w') as f:\n",
-    "    #             f.write(\"GENERAL ANALYSIS OF THE DATAFRAME\\n\")\n",
-    "    #             f.write(\"=\" * 80 + \"\\n\\n\")\n",
-    "                \n",
-    "    #             # Shape of the DataFrame\n",
-    "    #             f.write(\"📌 Shape of DataFrame:\\n\")\n",
-    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
-    "    #             f.write(f\"Rows: {shape[0]}, Columns: {shape[1]}\\n\\n\")\n",
-    "                \n",
-    "    #             # Column Information\n",
-    "    #             f.write(\"📌 Column Information:\\n\")\n",
-    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
-    "    #             wrapped_info = tabulate([[info]], tablefmt=\"fancy_grid\", stralign=\"center\")\n",
-    "    #             f.write(wrapped_info + \"\\n\\n\")\n",
-    "                \n",
-    "    #             # Missing Values\n",
-    "    #             f.write(\"📌 Missing Values in Each Column:\\n\")\n",
-    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
-    "    #             f.write(tabulate(null.to_frame(), headers=[\"Column\", \"Missing Values\"], tablefmt=\"fancy_grid\") + \"\\n\\n\")\n",
-    "                \n",
-    "    #             # Descriptive Statistics\n",
-    "    #             f.write(\"📌 Descriptive Statistics (Numerical):\\n\")\n",
-    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
-    "    #             f.write(tabulate(des, headers=\"keys\", tablefmt=\"fancy_grid\", showindex=True) + \"\\n\\n\")\n",
-    "                \n",
-    "    #             # First 5 Rows\n",
-    "    #             f.write(\"📌 First 5 Rows of the DataFrame:\\n\")\n",
-    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
-    "    #             f.write(tabulate(head, headers=\"keys\", tablefmt=\"fancy_grid\", showindex=True) + \"\\n\\n\")\n",
-    "                \n",
-    "    #             # Last 5 Rows\n",
-    "    #             f.write(\"📌 Last 5 Rows of the DataFrame:\\n\")\n",
-    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
-    "    #             f.write(tabulate(tail, headers=\"keys\", tablefmt=\"fancy_grid\", showindex=True) + \"\\n\\n\")\n",
-    "                \n",
-    "    #             # Duplicate Rows\n",
-    "    #             f.write(\"📌 Number of Duplicate Rows:\\n\")\n",
-    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
-    "    #             f.write(f\"{dup} duplicate rows found.\\n\\n\")\n",
-    "                \n",
-    "    #             # Correlation Matrix\n",
-    "    #             f.write(\"📌 Correlation Matrix (Numerical Columns):\\n\")\n",
-    "    #             f.write(\"-\" * 80 + \"\\n\")\n",
-    "    #             f.write(tabulate(corr_matrix, headers=\"keys\", tablefmt=\"fancy_grid\", showindex=True) + \"\\n\\n\")\n",
-    "                \n",
-    "    #             f.write(\"=\" * 80 + \"\\n\")\n",
-    "    #             f.write(\"📄 Report Generated Successfully!\\n\")\n",
-    "            \n",
-    "    #         print(f\"✅ Report saved successfully as '{report}'\")\n",
-    "\n",
-    "    # except Exception as e:\n",
-    "    #         print(f\"Error: {e}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# def Save_General_Report(corr_matrix, dup, head, tail, des, null, info, shape):\n",
-    "#     folder_path = input('Enter Folder Path: ')\n",
-    "#     os.makedirs(folder_path, exist_ok=True)\n",
-    "#     filename = os.path.join(folder_path, \"General_Report.csv\")\n",
-    "\n",
-    "#     # Combine the information into a single dictionary for the CSV file\n",
-    "#     report_data = {\n",
-    "#         \"Shape of DataFrame\": [f\"Rows: {shape[0]}, Columns: {shape[1]}\"],\n",
-    "#         \"Column Information\": [info],\n",
-    "#         \"Missing Values in Each Column\": [null.to_string()],\n",
-    "#         \"Descriptive Statistics (Numerical)\": [des.to_string()],\n",
-    "#         \"First 5 Rows of DataFrame\": [head.to_string()],\n",
-    "#         \"Last 5 Rows of DataFrame\": [tail.to_string()],\n",
-    "#         \"Number of Duplicate Rows\": [dup],\n",
-    "#         \"Correlation Matrix\": [corr_matrix.to_string()]\n",
-    "#     }\n",
-    "\n",
-    "#     # Convert report data to DataFrame\n",
-    "#     report_df = pd.DataFrame(report_data)\n",
-    "\n",
-    "#     # Save to CSV\n",
-    "#     report_df.to_csv(filename, index=False)\n",
-    "\n",
-    "#     print(f\"✅ Report saved successfully as {filename}\")\n",
     "    "
    ]
   },
@@ -195,123 +100,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def General_Analysis(df):\n",
-    "#     print(\"GENERAL ANALYSIS OF THE DATAFRAME\")\n",
-    "#     print(\"*\" * 50)\n",
-    "#     print(\"\\n\" + \"\\n\")\n",
-    "#     shape=df.shape\n",
-    "#     print(\"-\" * 50)\n",
-    "#     print(f\"Shape of DataFrame: {shape}\" )\n",
-    "#     print(\"-\" * 50)\n",
-    "#     print(\"\\n\" + \"\\n\")\n",
-    "#     print(\"-\" * 50)\n",
-    "#     print(\"Column Information:\")\n",
-    "#     print(\"-\" * 50)\n",
-    "#     buffer = StringIO()\n",
-    "#     df.info(buf=buffer)  # Write the info to the buffer\n",
-    "#     info = buffer.getvalue()\n",
-    "#     print(info)\n",
-    "#     print(\"\\n\" + \"\\n\")\n",
-    "#     print(\"-\" * 50)\n",
-    "#     print(\"Missing Values in Each Column:\")\n",
-    "#     print(\"-\" * 50)\n",
-    "#     null=df.isnull().sum()\n",
-    "#     print(null)\n",
-    "#     print(\"\\n\" + \"\\n\")\n",
-    "\n",
-    "#     numdf = df.select_dtypes(include=['number'])\n",
-    "#     print(\"-\" * 50)\n",
-    "#     print(\"Descriptive Statistics (Numerical):\")\n",
-    "#     print(\"-\" * 50)\n",
-    "#     des=numdf.describe()\n",
-    "#     print(des )\n",
-    "#     print(\"\\n\" + \"\\n\")\n",
-    "\n",
-    "    \n",
-    "#     print(\"-\" * 50)\n",
-    "#     print(\"First 5 Rows of the DataFrame:\")\n",
-    "#     print(\"-\" * 50)\n",
-    "#     head=df.head()\n",
-    "#     print(head )\n",
-    "#     print(\"\\n\" + \"\\n\")\n",
-    "\n",
-    "#     print(\"-\" * 50)\n",
-    "#     print(\"Last 5 Rows of the DataFrame:\")\n",
-    "#     print(\"-\" * 50)\n",
-    "#     tail=df.tail()\n",
-    "#     print(tail )\n",
-    "#     print(\"\\n\" + \"\\n\")\n",
-    "\n",
-    "#     print(\"-\" * 50)\n",
-    "#     dup=df.duplicated().sum()\n",
-    "#     print(f\"Number of Duplicate Rows: {dup}\" )\n",
-    "#     print(\"-\" * 50)\n",
-    "#     print(\"\\n\" + \"\\n\")\n",
-    "\n",
-    "#     print(\"-\" * 50)\n",
-    "#     print(\"Correlation Matrix (Numerical Columns):\")\n",
-    "#     print(\"-\" * 50)\n",
-    "#     # numdf = df.apply(pd.to_numeric, errors='coerce')\n",
-    "#     corr_matrix=numdf.corr()\n",
-    "#     print(corr_matrix )\n",
-    "#     print(\"\\n\" )\n",
-    "\n",
-    "#     print(\"-\" * 50)\n",
-    "#     # plt.figure(figsize=(8, 6))\n",
-    "#     # plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
-    "#     # plt.colorbar()\n",
-    "#     # plt.xticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=10)\n",
-    "#     # plt.yticks(np.arange(len(corr_matrix.columns)), corr_matrix.columns, rotation=45, fontsize=10)\n",
-    "#     # plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
-    "#     # plt.tight_layout()\n",
-    "#     # plt.show()\n",
-    "\n",
-    "#     rows, cols = corr_matrix.shape\n",
-    "\n",
-    "#     # Find the max column name length\n",
-    "#     max_label_length = max(len(label) for label in corr_matrix.columns)\n",
-    "\n",
-    "#     # Dynamically adjust figure size based on column name length and number of columns\n",
-    "#     fig_width = max(8, cols * 0.5, max_label_length * 0.5)  # Scale width with column names\n",
-    "#     fig_height = max(6, rows * 0.5)  # Scale height with number of rows\n",
-    "\n",
-    "#     plt.figure(figsize=(fig_width, fig_height))\n",
-    "#     plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
-    "#     plt.colorbar()\n",
-    "\n",
-    "#     plt.xticks(np.arange(cols), corr_matrix.columns, rotation=45, ha=\"right\", fontsize=12)\n",
-    "#     plt.yticks(np.arange(rows), corr_matrix.columns, rotation=0, fontsize=12)\n",
-    "\n",
-    "#     plt.title('Correlation Matrix Heatmap', fontsize=14)\n",
-    "#     plt.tight_layout()\n",
-    "#     plt.show()\n",
-    "#     print(\"-\" * 50 ) \n",
-    "#     # print(\"\", end=\"\")\n",
-    "#     save=input('Save General Report? (Y/N):')\n",
-    "#     if save.lower()==\"y\":\n",
-    "#         Save_Genreal_Report(corr_matrix, dup, head, tail, des, null, info, shape)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "def General_Analysis(df):\n",
     "    print(\"\\n\" + \"=\" * 60)\n",
     "    print(\"GENERAL ANALYSIS OF THE DATAFRAME\".center(60))\n",
     "    print(\"=\" * 60 + \"\\n\")\n",
     "\n",
-    "    # Adjust display settings for better output visibility\n",
+    "    \n",
     "    pd.options.display.float_format = '{:,.2f}'.format\n",
     "    pd.set_option('display.max_columns', None)\n",
     "    pd.set_option('display.width', 200)\n",
     "\n",
-    "    # 1. Shape of DataFrame\n",
+    "    \n",
     "    shape = df.shape\n",
     "    print(\"-\" * 60)\n",
     "    print(f\"Shape of DataFrame: {shape}\")\n",
     "    print(\"-\" * 60 + \"\\n\")\n",
     "\n",
-    "    # 2. Column Information\n",
+    "    \n",
     "    print(\"COLUMN INFORMATION\".center(60, \"-\"))\n",
     "    buffer = StringIO()\n",
     "    df.info(buf=buffer)\n",
@@ -319,44 +125,44 @@
     "    print(info)\n",
     "    print(\"\\n\")\n",
     "\n",
-    "    # 3. Missing Values\n",
+    "    \n",
     "    print(\"MISSING VALUES IN EACH COLUMN\".center(60, \"-\"))\n",
     "    null_values = df.isnull().sum()\n",
     "    print(null_values)\n",
     "    print(\"\\n\")\n",
     "\n",
-    "    # 4. Descriptive Statistics (Numerical)\n",
+    "    \n",
     "    numdf = df.select_dtypes(include=['number'])\n",
     "    print(\"DESCRIPTIVE STATISTICS (NUMERICAL)\".center(60, \"-\"))\n",
     "    des = numdf.describe()\n",
     "    print(tabulate(des, headers='keys', tablefmt='psql'))\n",
     "    print(\"\\n\")\n",
     "\n",
-    "    # 5. First 5 Rows\n",
+    "    \n",
     "    print(\"FIRST 5 ROWS OF THE DATAFRAME\".center(60, \"-\"))\n",
     "    head = df.head()\n",
     "    print(tabulate(head, headers='keys', tablefmt='psql'))\n",
     "    print(\"\\n\")\n",
     "\n",
-    "    # 6. Last 5 Rows\n",
+    "    \n",
     "    print(\"LAST 5 ROWS OF THE DATAFRAME\".center(60, \"-\"))\n",
     "    tail = df.tail()\n",
     "    print(tabulate(tail, headers='keys', tablefmt='psql'))\n",
     "    print(\"\\n\")\n",
     "\n",
-    "    # 7. Duplicate Rows\n",
+    "    \n",
     "    print(\"DUPLICATE ROWS\".center(60, \"-\"))\n",
     "    dup = df.duplicated().sum()\n",
     "    print(f\"Number of Duplicate Rows: {dup}\")\n",
     "    print(\"\\n\")\n",
     "\n",
-    "    # 8. Correlation Matrix\n",
+    "    \n",
     "    print(\"CORRELATION MATRIX (NUMERICAL COLUMNS)\".center(60, \"-\"))\n",
     "    corr_matrix = numdf.corr()\n",
     "    print(tabulate(corr_matrix, headers='keys', tablefmt='psql'))\n",
     "    print(\"\\n\")\n",
     "\n",
-    "    # 9. Correlation Matrix Heatmap\n",
+    "    \n",
     "    rows, cols = corr_matrix.shape\n",
     "    max_label_length = max(len(label) for label in corr_matrix.columns)\n",
     "\n",
@@ -372,7 +178,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "    # 10. Save Report Option\n",
+    "    \n",
     "    save = input('Save General Report? (Y/N): ')\n",
     "    if save.lower() == \"y\":\n",
     "        Save_Genreal_Report(corr_matrix, dup, head, tail, des, null_values, info, shape)\n",
