defined structure for custom analysis functionality

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,70 +105,49 @@
     "    print(\"\\n\" + \"=\" * 60)\n",
     "    print(\"GENERAL ANALYSIS OF THE DATAFRAME\".center(60))\n",
     "    print(\"=\" * 60 + \"\\n\")\n",
-    "\n",
     "    \n",
     "    pd.options.display.float_format = '{:,.2f}'.format\n",
     "    pd.set_option('display.max_columns', None)\n",
     "    pd.set_option('display.width', 200)\n",
-    "\n",
-    "    \n",
     "    shape = df.shape\n",
     "    print(\"-\" * 60)\n",
     "    print(f\"Shape of DataFrame: {shape}\")\n",
     "    print(\"-\" * 60 + \"\\n\")\n",
-    "\n",
-    "    \n",
     "    print(\"COLUMN INFORMATION\".center(60, \"-\"))\n",
     "    buffer = StringIO()\n",
     "    df.info(buf=buffer)\n",
     "    info = buffer.getvalue()\n",
     "    print(info)\n",
     "    print(\"\\n\")\n",
-    "\n",
-    "    \n",
     "    print(\"MISSING VALUES IN EACH COLUMN\".center(60, \"-\"))\n",
     "    null_values = df.isnull().sum()\n",
     "    print(null_values)\n",
     "    print(\"\\n\")\n",
-    "\n",
-    "    \n",
     "    numdf = df.select_dtypes(include=['number'])\n",
     "    print(\"DESCRIPTIVE STATISTICS (NUMERICAL)\".center(60, \"-\"))\n",
     "    des = numdf.describe()\n",
     "    print(tabulate(des, headers='keys', tablefmt='psql'))\n",
     "    print(\"\\n\")\n",
-    "\n",
-    "    \n",
     "    print(\"FIRST 5 ROWS OF THE DATAFRAME\".center(60, \"-\"))\n",
     "    head = df.head()\n",
     "    print(tabulate(head, headers='keys', tablefmt='psql'))\n",
     "    print(\"\\n\")\n",
-    "\n",
-    "    \n",
     "    print(\"LAST 5 ROWS OF THE DATAFRAME\".center(60, \"-\"))\n",
     "    tail = df.tail()\n",
     "    print(tabulate(tail, headers='keys', tablefmt='psql'))\n",
     "    print(\"\\n\")\n",
-    "\n",
-    "    \n",
     "    print(\"DUPLICATE ROWS\".center(60, \"-\"))\n",
     "    dup = df.duplicated().sum()\n",
     "    print(f\"Number of Duplicate Rows: {dup}\")\n",
     "    print(\"\\n\")\n",
-    "\n",
-    "    \n",
     "    print(\"CORRELATION MATRIX (NUMERICAL COLUMNS)\".center(60, \"-\"))\n",
     "    corr_matrix = numdf.corr()\n",
     "    print(tabulate(corr_matrix, headers='keys', tablefmt='psql'))\n",
     "    print(\"\\n\")\n",
-    "\n",
-    "    \n",
     "    rows, cols = corr_matrix.shape\n",
     "    max_label_length = max(len(label) for label in corr_matrix.columns)\n",
-    "\n",
     "    fig_width = max(8, cols * 0.5, max_label_length * 0.5)\n",
     "    fig_height = max(6, rows * 0.5)\n",
-    "\n",
     "    plt.figure(figsize=(fig_width, fig_height))\n",
     "    plt.imshow(corr_matrix, cmap='coolwarm', interpolation='nearest')\n",
     "    plt.colorbar()\n",
@@ -178,9 +157,8 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "    \n",
     "    save = input('Save General Report? (Y/N): ')\n",
-    "    if save.lower() == \"y\":\n",
+    "    if save.lower()==\"y\":\n",
     "        Save_Genreal_Report(corr_matrix, dup, head, tail, des, null_values, info, shape)\n",
     "\n",
     "\n",
@@ -191,7 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Custom_Analysis(df, col1, col2, num):\n",
+    "    column1=\"\"\n",
+    "    column2=\"\"\n",
+    "    for col in df.columns:\n",
+    "        \n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,8 +198,29 @@
     "        if(choice==\"1\"):\n",
     "           General_Analysis(df)\n",
     "        elif(choice==\"2\"):\n",
-    "            print(2)\n",
-    "            pass\n",
+    "            b1=True\n",
+    "            while(b1):\n",
+    "                print(\"1. Analyze Two Numeric Columns\")\n",
+    "                print(\"2. Analyze One Numeric and One String\")\n",
+    "                print(\"3. Analyze One Numeric Column\")\n",
+    "                print(\"4. Return\")\n",
+    "                choice=input(\"Enter Choice: \").strip()\n",
+    "                if(choice==\"1\"):\n",
+    "                  col1=input('Enter 1st Numeric Column')\n",
+    "                  col2=input('Enter 2nd Numeric Column')\n",
+    "                  Custom_Analysis(df, col1, col2, 1)\n",
+    "                  \n",
+    "                elif(choice==\"2\"):\n",
+    "                    col1=input('Enter 1st Numeric Column')\n",
+    "                    col2=input('Enter 2nd String Column')\n",
+    "                    Custom_Analysis(df, col1, col2, 2)\n",
+    "                elif(choice==\"3\"):\n",
+    "                  col1=input('Enter 1st Numeric Column')\n",
+    "                  Custom_Analysis(df, col1, col2, 3)\n",
+    "                elif (choice==\"4\"):\n",
+    "                   b1=False\n",
+    "                else:\n",
+    "                  print(\"Please Enter Valid Choice !\")\n",
     "        elif(choice==\"3\"):\n",
     "          # print(\"Exiting Program...\")\n",
     "          b=False\n",
@@ -216,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +254,7 @@
     "        elif(choice==\"2\"):\n",
     "              path = input(\"Enter File Path of Parquet File: \")\n",
     "              try:\n",
-    "                  df = pd.read_csv(path)\n",
+    "                  df = pd.read_parquet(path)\n",
     "                  Analyze_Data(df)\n",
     "              except (FileNotFoundError, Exception) as e:\n",
     "                  print(f\"Error: {e}\")\n",
@@ -248,7 +262,7 @@
     "        elif(choice==\"3\"):\n",
     "              path = input(\"Enter File Path of Excel File: \")\n",
     "              try:\n",
-    "                  df = pd.read_csv(path)\n",
+    "                  df = pd.read_excel(path)\n",
     "                  Analyze_Data(df)\n",
     "              except (FileNotFoundError, Exception) as e:\n",
     "                  print(f\"Error: {e}\")\n",
@@ -262,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
