retreiving columns entered by user from df without testing

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -174,9 +174,22 @@
    "outputs": [],
    "source": [
     "def Custom_Analysis(df, col1, col2, num):\n",
-    "    column1=\"\"\n",
-    "    column2=\"\"\n",
+    "    col1=col1.lower()\n",
+    "    col2=col2.lower()\n",
+    "    col1_actual = None\n",
+    "    col2_actual = None\n",
     "    for col in df.columns:\n",
+    "        col_lower = col.lower()\n",
+    "        if col_lower == col1:\n",
+    "            col1_actual = col\n",
+    "        if col_lower == col2:\n",
+    "            col2_actual = col\n",
+    "        if col1_actual and col2_actual:\n",
+    "            break\n",
+    "    if(not col1_actual or not col2_actual):\n",
+    "        print(\"Columns Not Found !\")\n",
+    "        return\n",
+    "    \n",
     "        \n",
     "\n",
     "        \n"
