retreived columns data based on solumn input of user with testing

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -169,26 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Custom_Analysis(df, col1, col2, num):\n",
-    "    col1=col1.lower()\n",
-    "    col2=col2.lower()\n",
-    "    col1_actual = None\n",
-    "    col2_actual = None\n",
-    "    for col in df.columns:\n",
-    "        col_lower = col.lower()\n",
-    "        if col_lower == col1:\n",
-    "            col1_actual = col\n",
-    "        if col_lower == col2:\n",
-    "            col2_actual = col\n",
-    "        if col1_actual and col2_actual:\n",
-    "            break\n",
-    "    if(not col1_actual or not col2_actual):\n",
-    "        print(\"Columns Not Found !\")\n",
+    "    col_names = {col.lower(): col for col in df.columns}\n",
+    "    col1_actual = col_names.get(col1.lower())\n",
+    "    col2_actual = col_names.get(col2.lower())\n",
+    "    if not col1_actual or not col2_actual:\n",
+    "        print(f\"❌ Error: One or both columns '{col1}' or '{col2}' not found in DataFrame.\")\n",
     "        return\n",
+    "    column1_data = df[col1_actual]\n",
+    "    column2_data = df[col2_actual]\n",
+    "    print(f\"Data for {col1_actual}:\\n\", column1_data.head(), \"\\n\")\n",
+    "    print(f\"Data for {col2_actual}:\\n\", column2_data.head(), \"\\n\")\n",
     "    \n",
     "        \n",
     "\n",
@@ -197,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
