have to apply visualisation of custom analysis functionality

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,26 +217,135 @@
     "    print(f\"Empty values in {col2_actual}: {empty_count_col2}\\n\")\n",
     "    correlation = column1_data.corr(column2_data)\n",
     "    print(f\"Correlation between {col1_actual} and {col2_actual}: {correlation}\\n\")\n",
+    "\n",
+    "    plt.figure(figsize=(12, 10))\n",
+    "\n",
+    "    # 1️⃣ Scatter Plot (Top Left)\n",
+    "    # plt.subplot(2, 2, 1)\n",
+    "    # plt.scatter(df[col1_actual], df[col2_actual], alpha=0.7)\n",
+    "    # plt.xlabel(col1_actual)\n",
+    "    # plt.ylabel(col2_actual)\n",
+    "    # plt.title(\"Scatter Plot\")\n",
+    "\n",
+    "\n",
+    "    # plt.subplot(2, 2, 1)\n",
+    "    sample_df = df.sample(n=1000, random_state=42)  # Reduce to 1000 points\n",
+    "    # plt.scatter(sample_df[col1_actual], sample_df[col2_actual], alpha=0.3)  # Add transparency\n",
+    "    # plt.xlabel(col1_actual)\n",
+    "    # plt.ylabel(col2_actual)\n",
+    "    # plt.title(\"Scatter Plot (Sampled)\")\n",
+    "\n",
+    "    plt.subplot(2, 2, 1)\n",
+    "\n",
+    "# Add jitter to spread overlapping points\n",
+    "    jitter_x = np.random.normal(0, 0.05, size=len(sample_df[col1_actual]))\n",
+    "    jitter_y = np.random.normal(0, 0.05, size=len(sample_df[col2_actual]))\n",
+    "\n",
+    "    plt.scatter(sample_df[col1_actual] + jitter_x, sample_df[col2_actual] + jitter_y, alpha=0.3)\n",
+    "    plt.xlabel(col1_actual)\n",
+    "    plt.ylabel(col2_actual)\n",
+    "    plt.title(\"Scatter Plot (Jittered)\")\n",
+    "\n",
+    "    # 2️⃣ Line Plot (Top Right)\n",
+    "    # plt.subplot(2, 2, 2)\n",
+    "    # plt.plot(df[col1_actual], df[col2_actual], marker='o', linestyle='-')\n",
+    "    # plt.xlabel(col1_actual)\n",
+    "    # plt.ylabel(col2_actual)\n",
+    "    # plt.title(\"Line Plot\")\n",
+    "\n",
+    "    # plt.subplot(2, 2, 2)\n",
+    "    # df['RollingMean'] = df[col2_actual].rolling(window=50).mean()  # Smoothen\n",
+    "    # plt.plot(df.index, df['RollingMean'], linestyle='-', alpha=0.7)\n",
+    "    # plt.xlabel(col1_actual)\n",
+    "    # plt.ylabel(col2_actual)\n",
+    "    # plt.title(\"Line Plot (Rolling Mean)\")\n",
+    "\n",
+    "    # plt.subplot(2, 2, 2)\n",
+    "    # rolling_window = 100  # Adjust window size based on dataset size\n",
+    "    # df['RollingMean'] = df[col2_actual].rolling(window=rolling_window).mean()\n",
+    "\n",
+    "    # plt.plot(df.index[::10], df['RollingMean'][::10], linestyle='-', alpha=0.7)  # Downsample every 10th point\n",
+    "    # plt.xlabel(col1_actual)\n",
+    "    # plt.ylabel(col2_actual)\n",
+    "    # plt.title(f\"Line Plot (Smoothed, Window={rolling_window})\")\n",
+    "\n",
+    "\n",
+    "    plt.subplot(2, 2, 2)\n",
+    "\n",
+    "# Smooth the data using rolling mean\n",
+    "    rolling_window = 100  # Adjust as needed\n",
+    "    df['RollingMean'] = df[col2_actual].rolling(window=rolling_window, min_periods=1).mean()\n",
+    "\n",
+    "    # Create a clean line plot with markers\n",
+    "    plt.plot(df.index, df['RollingMean'], marker='o', linestyle='-', color='black', linewidth=2, markersize=8)\n",
+    "\n",
+    "    plt.xlabel(col1_actual)\n",
+    "    plt.ylabel(col2_actual)\n",
+    "    plt.title(f\"Line Plot (Smoothed, Window={rolling_window})\")\n",
+    "    plt.grid(True, linestyle='--', alpha=0.5)  # Optional: Add grid for readability\n",
+    "\n",
+    "\n",
+    "    # 3️⃣ Histogram (Bottom Left)\n",
+    "    # plt.subplot(2, 2, 3)\n",
+    "    # plt.hist(df[col1_actual], alpha=0.5, label=col1_actual, bins=20)\n",
+    "    # plt.hist(df[col2_actual], alpha=0.5, label=col2_actual, bins=20)\n",
+    "    # plt.legend()\n",
+    "    # plt.xlabel(\"Value\")\n",
+    "    # plt.ylabel(\"Frequency\")\n",
+    "    # plt.title(\"Histogram\")\n",
+    "\n",
+    "    plt.subplot(2, 2, 3)\n",
+    "    plt.hist(df[col1_actual], bins=30, alpha=0.5, density=True, label=col1_actual)  \n",
+    "    plt.hist(df[col2_actual], bins=30, alpha=0.5, density=True, label=col2_actual)  \n",
+    "    plt.legend()\n",
+    "    plt.xlabel(\"Value\")\n",
+    "    plt.ylabel(\"Density\")\n",
+    "    plt.title(\"Histogram (Optimized)\")\n",
+    "\n",
+    "    # 4️⃣ Correlation Heatmap (Bottom Right)\n",
+    "    # plt.subplot(2, 2, 4)\n",
+    "    # corr_matrix = df[[col1_actual, col2_actual]].corr()\n",
+    "    # cax = plt.matshow(corr_matrix, cmap='coolwarm', vmin=-1, vmax=1, fignum=False)\n",
+    "    # plt.colorbar(cax)\n",
+    "    # plt.xticks([0, 1], [col1_actual, col2_actual], rotation=45)\n",
+    "    # plt.yticks([0, 1], [col1_actual, col2_actual])\n",
+    "    # plt.title(\"Correlation Heatmap\")\n",
+    "\n",
+    "    plt.subplot(2, 2, 4)\n",
     "    corr_matrix = df[[col1_actual, col2_actual]].corr()\n",
-    "\n",
-    "# Create a figure for the heatmap\n",
-    "    plt.figure(figsize=(6, 4))\n",
-    "\n",
-    "    # Create the heatmap using matshow\n",
-    "    cax = plt.matshow(corr_matrix, cmap='coolwarm', vmin=-1, vmax=1)\n",
-    "\n",
-    "    # Add color bar to the side of the heatmap\n",
-    "    plt.colorbar(cax)\n",
-    "\n",
-    "    # Set labels for the axes\n",
+    "    plt.imshow(corr_matrix, cmap='coolwarm', vmin=-1, vmax=1)\n",
+    "    plt.colorbar()\n",
     "    plt.xticks([0, 1], [col1_actual, col2_actual], rotation=45)\n",
     "    plt.yticks([0, 1], [col1_actual, col2_actual])\n",
+    "    plt.title(\"Correlation Heatmap\")\n",
     "\n",
-    "    # Set the title of the plot\n",
-    "    plt.title(f\"Correlation Heatmap: {col1_actual} vs {col2_actual}\")\n",
-    "\n",
-    "    # Show the plot\n",
+    "    # Adjust layout and show plot\n",
+    "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#     corr_matrix = df[[col1_actual, col2_actual]].corr()\n",
+    "\n",
+    "# # Create a figure for the heatmap\n",
+    "#     plt.figure(figsize=(6, 4))\n",
+    "\n",
+    "#     # Create the heatmap using matshow\n",
+    "#     cax = plt.matshow(corr_matrix, cmap='coolwarm', vmin=-1, vmax=1)\n",
+    "\n",
+    "#     # Add color bar to the side of the heatmap\n",
+    "#     plt.colorbar(cax)\n",
+    "\n",
+    "#     # Set labels for the axes\n",
+    "#     plt.xticks([0, 1], [col1_actual, col2_actual], rotation=45)\n",
+    "#     plt.yticks([0, 1], [col1_actual, col2_actual])\n",
+    "\n",
+    "#     # Set the title of the plot\n",
+    "#     plt.title(f\"Correlation Heatmap: {col1_actual} vs {col2_actual}\")\n",
+    "\n",
+    "#     # Show the plot\n",
+    "#     plt.show()\n",
     "    # plt.scatter(column1_data, column2_data)\n",
     "    # plt.xlabel(col1_actual)\n",
     "    # plt.ylabel(col2_actual)\n",
