added categorize analysis with custom column input by user

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,14 @@
     "import os\n",
     "import textwrap\n",
     "from io import StringIO\n",
-    "from tabulate import tabulate"
+    "from tabulate import tabulate\n",
+    "from collections import Counter\n",
+    "from wordcloud import WordCloud"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,11 +275,11 @@
     "    plt.subplot(2, 2, 2)\n",
     "\n",
     "# Smooth the data using rolling mean\n",
-    "    rolling_window = 100  # Adjust as needed\n",
+    "    rolling_window = 500  # Adjust as needed\n",
     "    df['RollingMean'] = df[col2_actual].rolling(window=rolling_window, min_periods=1).mean()\n",
     "\n",
     "    # Create a clean line plot with markers\n",
-    "    plt.plot(df.index, df['RollingMean'], marker='o', linestyle='-', color='black', linewidth=2, markersize=8)\n",
+    "    plt.plot(df.index, df['RollingMean'], linestyle='-')\n",
     "\n",
     "    plt.xlabel(col1_actual)\n",
     "    plt.ylabel(col2_actual)\n",
@@ -295,12 +297,13 @@
     "    # plt.title(\"Histogram\")\n",
     "\n",
     "    plt.subplot(2, 2, 3)\n",
-    "    plt.hist(df[col1_actual], bins=30, alpha=0.5, density=True, label=col1_actual)  \n",
-    "    plt.hist(df[col2_actual], bins=30, alpha=0.5, density=True, label=col2_actual)  \n",
+    "    plt.hist(df[col1_actual], bins=30, alpha=0.7, density=True, color='darkblue', label=col1_actual)  \n",
+    "    plt.hist(df[col2_actual], bins=30, alpha=0.7, density=True, color='darkred', label=col2_actual)  \n",
     "    plt.legend()\n",
     "    plt.xlabel(\"Value\")\n",
     "    plt.ylabel(\"Density\")\n",
     "    plt.title(\"Histogram (Optimized)\")\n",
+    "\n",
     "\n",
     "    # 4️⃣ Correlation Heatmap (Bottom Right)\n",
     "    # plt.subplot(2, 2, 4)\n",
@@ -373,7 +376,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_string_column(df, column_name, top_n=10):\n",
+    "    if column_name not in df.columns:\n",
+    "        print(f\"Column '{column_name}' not found in DataFrame.\")\n",
+    "        return\n",
+    "    \n",
+    "    # Count occurrences of each unique value\n",
+    "    value_counts = Counter(df[column_name].dropna())  # Drop NaN values if any\n",
+    "\n",
+    "    # If the number of unique categories exceeds 'top_n', combine the less frequent ones into 'Others'\n",
+    "    if len(value_counts) > top_n:\n",
+    "        # Get the most common 'top_n' categories\n",
+    "        most_common = dict(value_counts.most_common(top_n))\n",
+    "        \n",
+    "        # Calculate the sum of the remaining categories and assign it to 'Others'\n",
+    "        others_count = sum(count for _, count in value_counts.items() if _ not in most_common)\n",
+    "        most_common[\"Others\"] = others_count\n",
+    "        \n",
+    "        value_counts = most_common\n",
+    "\n",
+    "    # Extract labels and their counts\n",
+    "    labels = list(value_counts.keys())\n",
+    "    counts = list(value_counts.values())\n",
+    "\n",
+    "    # Create a figure\n",
+    "    plt.figure(figsize=(14, 8))\n",
+    "    \n",
+    "    # Plot 1: Vertical Bar Chart\n",
+    "    plt.subplot(2, 2, 1)  # 2 rows, 2 columns, 1st plot\n",
+    "    plt.bar(labels, counts, color='darkblue')\n",
+    "    plt.xlabel(\"Category\")\n",
+    "    plt.ylabel(\"Count\")\n",
+    "    plt.title(f\"Distribution of {column_name} (Top {top_n} Categories)\")\n",
+    "\n",
+    "    # Add category-wise totals (above each bar)\n",
+    "    for i, count in enumerate(counts):\n",
+    "        plt.text(i, count + 0.1, str(count), ha='center', fontsize=12, fontweight='bold', color='black')\n",
+    "\n",
+    "    # Plot 2: Pie Chart\n",
+    "    plt.subplot(2, 2, 2)  # 2 rows, 2 columns, 2nd plot\n",
+    "    plt.pie(counts, labels=labels, autopct='%1.1f%%', colors=plt.cm.Paired.colors)\n",
+    "    plt.title(f\"Distribution of {column_name} (Pie Chart)\")\n",
+    "\n",
+    "    # Plot 3: Word Cloud (Only for text-based columns)\n",
+    "    plt.subplot(2, 2, 3)  # 2 rows, 2 columns, 3rd plot\n",
+    "    if df[column_name].dtype == 'object':  # Check if column contains textual data\n",
+    "        text = \" \".join(df[column_name].dropna())\n",
+    "        wordcloud = WordCloud(width=800, height=400, background_color=\"white\").generate(text)\n",
+    "\n",
+    "        plt.imshow(wordcloud, interpolation=\"bilinear\")\n",
+    "        plt.axis('off')\n",
+    "        plt.title(f\"Word Cloud for {column_name}\")\n",
+    "    else:\n",
+    "        plt.axis('off')  # Hide axis if no word cloud\n",
+    "    \n",
+    "    # Plot 4: Heatmap (Alternative Visualization)\n",
+    "    plt.subplot(2, 2, 4)  # 2 rows, 2 columns, 4th plot\n",
+    "    # Heatmap: Convert counts into a DataFrame and display it as a heatmap-like effect\n",
+    "    heatmap_data = np.array(counts).reshape(1, -1)  # Reshape to a 2D array for heatmap-like effect\n",
+    "    plt.imshow(heatmap_data, aspect='auto', cmap='Blues')\n",
+    "    plt.colorbar(label=\"Count\")\n",
+    "    plt.title(f\"Heatmap for {column_name}\")\n",
+    "    plt.xticks(ticks=np.arange(len(labels)), labels=labels, rotation=90)\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Basic Analysis\n",
+    "    print(f\"\\nBasic Analysis of '{column_name}':\")\n",
+    "    print(f\"Total unique values (Top {top_n} with 'Others'): {len(value_counts)}\")\n",
+    "    for label, count in value_counts.items():\n",
+    "        print(f\"{label}: {count} occurrences\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,9 +483,9 @@
     "                  Custom_Analysis(df, col1, col2, 1)\n",
     "                  \n",
     "                elif(choice==\"2\"):\n",
-    "                    col1=input('Enter 1st Numeric Column')\n",
-    "                    col2=input('Enter 2nd String Column')\n",
-    "                    Custom_Analysis(df, col1, col2, 2)\n",
+    "                    # col1=input('Enter 1st Numeric Column')\n",
+    "                    col2=input('Enter String Column')\n",
+    "                    plot_string_column(df, col2)\n",
     "                elif(choice==\"3\"):\n",
     "                  col1=input('Enter 1st Numeric Column')\n",
     "                  Custom_Analysis(df, col1, col2, 3)\n",
@@ -419,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +635,7 @@
     "          b=False\n",
     "    else:\n",
     "        print(\"Please Enter Valid Choice !\")\n",
-    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwali Sales Data.csv\n",
+    "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\Diwa2li Sales Data.csv\n",
     "# C:\\\\Users\\\\Shivam\\\\Downloads\\\\road_accident_dataset.csv\n",
     "# D:\\\\shivam\n"
    ]
